--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <html>
     <title>Mission Bit Intro Curriculum</title>
-    <head></head>
+    <head>
+        <style>
+            table {
+                font-family: arial, sans-serif;
+                border-collapse: collapse;
+                width: 100%;
+            }
+
+            td, th {
+                border: 1px solid #dddddd;
+                text-align: left;
+                padding: 8px;
+            }
+
+            tr:nth-child(even) {
+                background-color: #dddddd;
+            }
+        </style>
+    </head>
     
     <h1>Intro to Web Development Curriculum</h1>
     
