--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
     <body>
         <table>
             <tr>
-                <th>Company</th>
-                <th>Contact</th>
-                <th>Country</th>
+                <th>Week #</th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
             </tr>
             <tr>
                 <td>Alfreds Futterkiste</td>
+                <td>Maria Anders</td>
+                <td>Germany</td>
                 <td>Maria Anders</td>
                 <td>Germany</td>
             </tr>
@@ -38,26 +43,36 @@
                 <td>Centro comercial Moctezuma</td>
                 <td>Francisco Chang</td>
                 <td>Mexico</td>
+                <td>Maria Anders</td>
+                <td>Germany</td>
             </tr>
             <tr>
                 <td>Ernst Handel</td>
                 <td>Roland Mendel</td>
                 <td>Austria</td>
+                <td>Maria Anders</td>
+                <td>Germany</td>
             </tr>
             <tr>
                 <td>Island Trading</td>
                 <td>Helen Bennett</td>
                 <td>UK</td>
+                <td>Maria Anders</td>
+                <td>Germany</td>
             </tr>
             <tr>
                 <td>Laughing Bacchus Winecellars</td>
                 <td>Yoshi Tannamuri</td>
                 <td>Canada</td>
+                <td>Maria Anders</td>
+                <td>Germany</td>
             </tr>
             <tr>
                 <td>Magazzini Alimentari Riuniti</td>
                 <td>Giovanni Rovelli</td>
                 <td>Italy</td>
+                <td>Maria Anders</td>
+                <td>Germany</td>
             </tr>
         </table>
     </body>
