--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             </tr>
             <tr>
                 <td>1</td>
-                <td>Alfreds Futterkiste</td>
-                <td>Maria Anders</td>
-                <td>Germany</td>
-                <td>Maria Anders</td>
-                <td>Germany</td>
+                <td><strong> HTML/CSS</strong> <br /> Project: create portfolio- About me Page</td>
+                <td><strong> HTML/CSS</strong> <br /> Project: begin Build Your Own Adventure Game and link to project</td>
+                <td>Continue Adventure Game <br /> <strong>(9:00 - 11:30)</strong></td>
+                <td>Finish Adventure game, Present to class, <strong><br />Introduce JS concepts if you have time</strong></td>
+                <td>Introduce JS concepts <br /> Assign JS mini-project</td>
             </tr>
             <tr>
                 <td>2</td>
