--- a/index.html
+++ b/index.html
@@ -42,43 +42,40 @@
             </tr>
             <tr>
                 <td>2</td>
-                <td>Centro comercial Moctezuma</td>
-                <td>Francisco Chang</td>
-                <td>Mexico</td>
-                <td>Maria Anders</td>
-                <td>Germany</td>
+                <td>JS Concepts (loops, conditionals, etc.)</td>
+                <td>Introduce JS as a web framework</td>
+                <td>cont. JS as a web framework <br/><strong>Project:</strong> Integrate JS into portfolio</td>
+                <td>Continue JS project</td>
+                <td>Short Recap: field trip</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Ernst Handel</td>
-                <td>Roland Mendel</td>
-                <td>Austria</td>
-                <td>Maria Anders</td>
-                <td>Germany</td>
+                <td>Introduce sprites and game mechanics <br/>+<br/> begin phaser mini-project #1 pt. 1</td>
+                <td>Finish phaser tutorial pt. 1 <br/>+<br/> start and complete pt. 2- game state exantion of pt. 1<br/><strong>(9:00-11:00)</strong></td>
+                <td>Add Phaser mini-project to portfolio <br/>+<br/>Introduce game concepts <br/>+<br/> brainstorming<br/><strong>(9:00-11:00)</strong></td>
+                <td>Begin final project</td>
+                <td>No Class</td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>Island Trading</td>
-                <td>Helen Bennett</td>
-                <td>UK</td>
-                <td>Maria Anders</td>
-                <td>Germany</td>
+                <td>No Class</td>
+                <td>No Class</td>
+                <td>Final Projects <br/><strong>(9:00-11:00)</strong></td>
+                <td>Final Projects</td>
+                <td>Final Projects</td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>Laughing Bacchus Winecellars</td>
-                <td>Yoshi Tannamuri</td>
-                <td>Canada</td>
-                <td>Maria Anders</td>
-                <td>Germany</td>
+                <td>Final Projects</td>
+                <td>Final Projects</td>
+                <td>Final Projects<br/><strong>(9:00-11:00)</strong></td>
+                <td>Final Projects</td>
+                <td>Introduce presentation requirements, work on presentation slides/Final Projects</td>
             </tr>
             <tr>
                 <td>6</td>
-                <td>Magazzini Alimentari Riuniti</td>
-                <td>Giovanni Rovelli</td>
-                <td>Italy</td>
-                <td>Maria Anders</td>
-                <td>Germany</td>
+                <td>Final Presentation Practice <br/>+<br/> final project cleaning up/finalization</td>
+                <td><strong>DEMO DAY</strong></td>
             </tr>
         </table>
     </body>
