--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <tr>
                 <td>3</td>
                 <td>Introduce sprites and game mechanics <br/>+<br/> begin phaser mini-project #1 pt. 1</td>
-                <td>Finish phaser tutorial pt. 1 <br/>+<br/> start and complete pt. 2- game state exantion of pt. 1<br/><strong>(9:00-11:00)</strong></td>
+                <td>Finish phaser tutorial pt. 1 <br/>+<br/> start and complete pt. 2- game state exantion of pt. 1</td>
                 <td>Add Phaser mini-project to portfolio <br/>+<br/>Introduce game concepts <br/>+<br/> brainstorming<br/><strong>(9:00-11:00)</strong></td>
                 <td>Begin final project</td>
                 <td>No Class</td>
