--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     <h1>Intro to Web Development Curriculum</h1>
     
     <body>
+        <div class="container">
+  <h2>Simple Collapsible</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Simple collapsible</button>
+  <div id="demo" class="collapse in">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+ 
         <table>
             <tr>
                 <th>Week #</th>
@@ -78,5 +86,7 @@
                 <td><strong>DEMO DAY</strong></td>
             </tr>
         </table>
+       </div>
+</div>
     </body>
 </html>
