--- a/index.html
+++ b/index.html
@@ -28,13 +28,9 @@
     
     <body>
         <div class="container">
-  <h2>Simple Collapsible</h2>
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Simple collapsible</button>
-  <div id="demo" class="collapse in">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- 
+  <h2>Curriculum Timelines</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Summer</button>
+  <div id="demo" class="collapse">
         <table>
             <tr>
                 <th>Week #</th>
