--- a/index.html
+++ b/index.html
@@ -104,12 +104,18 @@
                         <th>Day 6</th>
                     </tr>
                     <tr>
+                        <td>4:00 - 4:30</td>
                         <td>Introductions: You, students, course, policies, norms</td>
                         <td>Finish HTML: linking, pictures, videos</td>
                         <td>Set up Github repositories + clone to github desktop</td>
-                        <td>Work on Build Your Own Adventure (BYOA) Game</td>
-                        <td>Cont. BYOA</td>
-                        <td>Finish presenting BYOA</td>
+                        <td rowspan="4">Work on Build Your Own Adventure (BYOA) Game</td>
+                        <td rowspan="3">Cont. BYOA</td>
+                        <td rowspan="2">Finish presenting BYOA</td>
+                    </tr>
+                    
+                    <tr>
+                        <td>4:30 - 5:00</td>
+                        <td>Have everyone create github accounts + review policies</td>
                     </tr>
                     
                 </table>
