--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
                     <tr>
                         <td>4:30 - 5:00</td>
                         <td>Have everyone create github accounts + review policies</td>
+                        <td>Introduce CSS: what it is, what it does, selector/property/value, in-line vs external</td>
+                        <td>Commit about me page to github, teach how to commit and push on github desktop.</td>
+                        <td>Begin presenting BYOA game (if there is time)</td>
+                        <td>Link BYOA to portfolio + review CSS/HTML + Introduce JS concepts</td>
                     </tr>
                     
                 </table>
