--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <!-- Button to open the modal login form -->
+        <h1>Welcome Mission Bit Students and Instructors!</h1>
 <button onclick="document.getElementById('id01').style.display='block'">Login</button>
 
 <!-- The Modal -->
