--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 class="close" title="Close Modal">&times;</span>
 
   <!-- Modal Content -->
-  <form class="modal-content animate" action="action_page.php" method="get">
+  <form class="modal-content animate" action="/action_page.php" method="get">
     <div class="imgcontainer">
       <img src="img_avatar2.png" alt="Avatar" class="avatar">
     </div>
