--- a/intro_curr.html
+++ b/intro_curr.html
@@ -39,20 +39,16 @@
                 <th>Thursday</th>
                 <th>Friday</th>
             </tr>
-            <div class="dropdown">
+
             <tr>
                 <td>1</td>
-                <td class="droptd"><strong> HTML/CSS</strong> <br /> Project: create portfolio- About me Page</td>
-                    <div class="dropdown-content">
-                        <p>Dropdown content 1</p>
-                    </div>
-                /*<td ><strong> HTML/CSS</strong> <br /> Project: begin Build Your Own Adventure Game and link to project</td>*/
+                <td><strong>HTML/CSS</strong> <br/> Project: create portfolio=> about me page</td>
                <td id="thisiswhatiwanttohaveahover"><strong> HTML/CSS</strong> <br /> Project: begin Build Your Own Adventure Game and link to project<div class="tooltip hidden"><p>Pop up content #1</p></div></td>
                 <td>Continue Adventure Game <br /> <strong>(9:00 - 11:30)</strong></td>
                 <td>Finish Adventure game, Present to class, <strong><br />Introduce JS concepts if you have time</strong></td>
                 <td>Introduce JS concepts <br /> Assign JS mini-project</td>
             </tr>
-            </div>
+
             <tr>
                 <td>2</td>
                 <td>JS Concepts (loops, conditionals, etc.)</td>
