--- a/intro_curr.html
+++ b/intro_curr.html
@@ -6,10 +6,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <style>
-            td span.tooltip{
+            p span.tooltip{
                 display:none;
             }
-            td:hover span.tooltip{
+            p:hover span.tooltip{
                 position:absolute; 
                 top:30; 
                 left:20px; 
@@ -53,7 +53,7 @@
 
             <tr>
                 <td>1</td>
-                <td><strong>HTML/CSS</strong> <br/> Project: create portfolio=> about me page <span class="tooltip">pop up content #1</span></td>
+                <td><p><strong>HTML/CSS</strong> <br/> Project: create portfolio=> about me page <span class="tooltip">pop up content #1</span></p></td>
                 <td><strong> HTML/CSS</strong> <br /> Project: begin Build Your Own Adventure Game and link to project</td>
                 <td>Continue Adventure Game <br /> <strong>(9:00 - 11:30)</strong></td>
                 <td>Finish Adventure game, Present to class, <strong><br />Introduce JS concepts if you have time</strong></td>
