--- a/intro_syll.html
+++ b/intro_syll.html
@@ -26,7 +26,7 @@
               <a class="navbar-brand" href="#">Mission Bit Instruction Tool</a>
             </div>
             <ul class="nav navbar-nav">
-              <li><a href="#">Home</a></li>
+              <li><a href="mbit_home.html">Home</a></li>
               <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">Intro to Web<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="intro_syll.html">Syllabus</a></li>
